# LIVIQ

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  MEMORY.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.claude/: launch.json
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ai-context.yml  ci.yml  evals.yml  python-mcp.yml
apps/ai-worker/: .coverage  package.json  pyproject.toml
apps/ai-worker/src/ai_worker/: __init__.py  config.py  graph_sync.py  ingest.py  ingest_notice.py  notices_publish.py  parsing.py  worker.py
apps/ai-worker/tests/: conftest.py  test_config.py  test_graph_sync.py  test_ingest.py  test_ingest_notice.py  test_notice_retrieval.py  test_notices_publish.py  test_parsing.py  test_smoke.py  test_worker_task.py
apps/api/: .coverage  package.json  pyproject.toml
apps/api/app/: __init__.py  accounts.py  answer_cache.py  auth_tokens.py  code_refs.py  codes_seed.py  config.py  deps.py  fees_excel.py  inquiry_classify.py  invites.py  mail.py  main.py  oauth.py  outbox.py  password.py  pii.py  rate_limit.py  session.py
apps/api/app/routers/: __init__.py  admin_tenants.py  approvals.py  assistant.py  auth.py  codes.py  dashboard.py  documents.py  facilities.py  fees.py  households.py  inquiries.py  notices.py  notifications.py  onboarding.py  review_queue.py  roster.py  staff.py  twin.py
apps/api/app/schemas/: __init__.py  admin.py  approvals.py  assistant.py  auth.py  codes.py  dashboard.py  documents.py  facilities.py  fees.py  households.py  inquiries.py  notices.py  notifications.py  onboarding.py  review_queue.py  roster.py  twin.py
apps/api/scripts/: backfill_staff_names.py  bootstrap_sys_admin.py  export_openapi.py  seed_demo.py  seed_households_xlsx.py
apps/api/tests/: conftest.py  test_answer_cache.py  test_approvals.py  test_assistant.py  test_assistant_tools.py  test_auth.py  test_bootstrap.py  test_codes.py  test_dashboard.py  test_documents.py  test_facilities.py  test_fees.py  test_fees_excel.py  test_households.py  test_inquiries.py  test_inquiry_classify.py  test_notices.py  test_notifications.py  test_onboarding.py  test_pii.py  test_rate_limit.py  test_review_queue.py  test_roles_invites.py  test_roster.py  test_session.py  test_smoke.py  test_twin.py
apps/web-admin/: CLAUDE.md  eslint.config.mjs  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web-resident/: CLAUDE.md  eslint.config.mjs  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
docs/: 00-requirements.md  01-architecture.md  02-directory-structure.md  03-database-design.md  04-menu-structure.md  05-ui-ux-design.md  06-security-privacy.md  07-testing-strategy.md  08-llm-token-optimization.md  09-implementation-harness.md  10-project-plan.md  11-data-architecture.md  README.md  ai-readiness-map.html  ai-readiness-score.json  design-handoff-prompt.md
docs/adr/: 0001-monorepo-layered-ai.md  0002-mask-before-external-llm.md  0003-erp-single-source-fees.md  0004-mcp-module-split-shared-store.md  0005-single-llm-openai-compat.md  0006-fees-excel-upload-source.md  0007-readonly-tool-agent.md  0008-freeze-mcp-prototype.md  0009-neo4j-in-mvp.md  0010-envelope-encryption-env-master-key.md  0011-redis-server-session.md  0012-in-app-notification-only.md  0013-python-backend.md  0014-local-email-auth.md  0015-notice-board-replaces-ai-draft.md  0016-document-board-versioned-attachment.md  0017-tenant-code-registry.md  0018-inquiry-manual-handling.md  0019-complex-twin-3d.md  README.md  _template.md
docs/review/: codex-review.md  cursor-review.md  deep-check-2026-07-13.md
evals/: README.md  adapter.mjs  run.mjs
evals/cases/: citation.json  fee-and-broadcast.json  fee.json  onboarding-privacy.json  privacy-masking.json  readonly-tools.json  review-queue.json  tenant-isolation.json
evals/results/: 2026-07-02.json  2026-07-13.json  2026-07-17.json
infra/: docker-compose.yml
mcp/: CLAUDE.md  apt_mcp_server.py  gmail_mcp_server.py  management_agent.py  pyproject.toml  reauth_gmail.py
mcp/fee_agent/: __init__.py  agent.py  config.py  mailer.py  sheets.py  store.py  tools.py
refs/: README.md
scripts/: check-context-paths.mjs
tests/e2e/: assistant.spec.ts  (+15 more)
(+193 files in other folders)
