[project]
name = "liviq-ai-worker"
version = "0.1.0"
description = "LIVIQ ai-worker — arq 워커 (인제스트·OCR·임베딩·평가·graph-sync)"
requires-python = ">=3.12"
dependencies = [
    "arq",
    "pydantic-settings",
    "liviq-db",
    "liviq-ai-core",
]

[tool.uv.sources]
liviq-db = { workspace = true }
liviq-ai-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 커버리지 게이트 80%(docs/09 §4.1) — 로컬·CI 동일. 소스는 ai_worker 패키지만.
addopts = "--cov=ai_worker --cov-report=term-missing --cov-fail-under=80"
