[project]
name = "liviq-api"
version = "0.1.0"
description = "LIVIQ api — FastAPI (도메인 API·BFF·AI 오케스트레이션 진입)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic>=2",
    "pydantic-settings",
    "sse-starlette",
    "httpx",
    "uvicorn[standard]",
    "python-multipart",
    "boto3",
    "arq",
    "liviq-db",
    "liviq-ai-core",
    "cryptography>=49.0.0",
    "openpyxl>=3.1.5",
]

[tool.uv.sources]
liviq-db = { workspace = true }
liviq-ai-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# 커버리지 게이트 80%(docs/09 §4.1) — 로컬·CI 동일. 소스는 app 패키지만(tests 제외).
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

# SQLAlchemy async 핸들러 본문은 greenlet 컨텍스트에서 실행돼 기본 트레이서가 놓친다.
# greenlet concurrency로 라우터 핸들러 커버리지를 정확히 측정(ASGI 테스트, docs/09 §4.1).
[tool.coverage.run]
concurrency = ["greenlet"]
